@@ -2,16 +2,20 @@ package com.cta4j.bus.stop.internal.impl;
 
 import com.cta4j.bus.common.internal.context.BusApiContext;
 import com.cta4j.bus.common.internal.util.ApiUtils;
+import com.cta4j.bus.common.internal.wire.CtaResponse;
 import com.cta4j.bus.stop.StopsApi;
 import com.cta4j.bus.stop.internal.wire.CtaStop;
 import com.cta4j.bus.stop.internal.mapper.StopMapper;
+import com.cta4j.bus.stop.internal.wire.CtaStopBustimeResponse;
+import com.cta4j.bus.stop.internal.wire.CtaStopError;
 import com.cta4j.bus.stop.model.Stop;
-import com.cta4j.bus.common.internal.wire.CtaError;
 import com.cta4j.exception.Cta4jException;
 import com.cta4j.common.internal.http.HttpClient;
 import org.apache.hc.core5.net.URIBuilder;
 import org.jetbrains.annotations.ApiStatus;
 import org.jspecify.annotations.NullMarked;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import tools.jackson.core.JacksonException;
 import tools.jackson.core.type.TypeReference;
 
@@ -19,10 +23,12 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
 
-@NullMarked
 @ApiStatus.Internal
+@NullMarked
 public final class StopsApiImpl implements StopsApi {
-    private static final String STOPS_ENDPOINT = String.format("%s/getstops", ApiUtils.API_PREFIX);
+    private static final Logger log = LoggerFactory.getLogger(StopsApiImpl.class);
+
+    private static final String STOPS_ENDPOINT = "%s/getstops".formatted(ApiUtils.API_PREFIX);
     private static final int MAX_STOP_IDS_PER_REQUEST = 10;
 
     private final BusApiContext context;
@@ -51,17 +57,14 @@ public final class StopsApiImpl implements StopsApi {
 
     @Override
     public List<Stop> findByIds(Collection<String> stopIds) {
-        Objects.requireNonNull(stopIds);
+        stopIds = List.copyOf(stopIds);
 
         if (stopIds.isEmpty()) {
             return List.of();
         }
 
-        stopIds.forEach(Objects::requireNonNull);
-
         if (stopIds.size() > MAX_STOP_IDS_PER_REQUEST) {
-            String message = String.format(
-                "A maximum of %d stop IDs can be requested at once, but %d were provided",
+            String message = "A maximum of %d stop IDs can be requested at once, but %d were provided".formatted(
                 MAX_STOP_IDS_PER_REQUEST,
                 stopIds.size()
             );
@@ -86,35 +89,45 @@ public final class StopsApiImpl implements StopsApi {
     private List<Stop> makeRequest(String url) {
         String response = HttpClient.get(url);
 
-        TypeReference<CtaResponse<List<CtaStop>>> typeReference = new TypeReference<>() {};
-        CtaResponse<List<CtaStop>> stopsResponse;
+        TypeReference<CtaResponse<CtaStopBustimeResponse>> typeReference = new TypeReference<>() {};
+        CtaResponse<CtaStopBustimeResponse> stopsResponse;
 
         try {
             stopsResponse = this.context.jsonMapper()
                                         .readValue(response, typeReference);
         } catch (JacksonException e) {
-            String message = String.format("Failed to parse response from %s", STOPS_ENDPOINT);
+            String message = "Failed to parse response from %s".formatted(STOPS_ENDPOINT);
 
             throw new Cta4jException(message, e);
         }
 
-        CtaBustimeResponse<List<CtaStop>> bustimeResponse = stopsResponse.bustimeResponse();
+        CtaStopBustimeResponse bustimeResponse = stopsResponse.bustimeResponse();
 
-        List<CtaError> errors = bustimeResponse.error();
-        List<CtaStop> stops = bustimeResponse.data();
+        List<CtaStop> stops = bustimeResponse.stop();
+        List<CtaStopError> errors = bustimeResponse.error();
 
-        if ((errors != null) && !errors.isEmpty()) {
-            String message = ApiUtils.buildErrorMessage(STOPS_ENDPOINT, errors);
-
-            throw new Cta4jException(message);
+        if (stops != null && !stops.isEmpty()) {
+            return stops.stream()
+                        .map(StopMapper.INSTANCE::toDomain)
+                        .toList();
         }
 
-        if ((stops == null) || stops.isEmpty()) {
+        if (errors == null || errors.isEmpty()) {
+            log.warn("Received empty response from {}", STOPS_ENDPOINT);
+
             return List.of();
         }
 
-        return stops.stream()
-                    .map(StopMapper.INSTANCE::toDomain)
-                    .toList();
+        boolean notFound = errors.stream()
+                                 .allMatch(error ->
+                                     error.rt() != null || error.dir() != null || error.stpid() != null);
+
+        if (notFound) {
+            return List.of();
+        }
+
+        String message = ApiUtils.buildErrorMessage(STOPS_ENDPOINT, errors);
+
+        throw new Cta4jException(message);
     }
 }
